change eqn num align

--- a/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-1.md
+++ b/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-1.md
@@ -16,7 +16,7 @@ toc: false
 We need to prove:
 
 \begin{equation}
-\underset{k}{\operatorname{argmax}} \hat y_k = \underset{k}{\operatorname{argmin}} \|t_k-\hat y\|^2. 
+\underset{k}{\operatorname{argmax}} \hat y_k = \underset{k}{\operatorname{argmin}} \|t_k-\hat y\|^2             
 \label{eq:2-1a}
 \end{equation}
 
