--- a/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-1.md
+++ b/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-1.md
@@ -54,7 +54,7 @@ Recall the constraint $e_j^T\beta=0$, we obtain
 
 \begin{equation}
 \hat\lambda^{\text{new}} = 
-2\frac{e_j^T(\textbf{X}^T\textbf{X})^{-1}\textbf{X}^T\textbf{y}}{e_j^T(\textbf{X}^T\textbf{X})^{-1}e_j}.\label{eq:3-1a}
+2\frac{e_j^T(\textbf{X}^T\textbf{X})^{-1}\textbf{X}^T\textbf{y}}{e_j^T(\textbf{X}^T\textbf{X})^{-1}e_j}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \label{eq:3-1a}
 \end{equation}
 
 So we have 
