--- a/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-1.md
+++ b/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-1.md
@@ -1,5 +1,5 @@
 ---
-title: Exercise 2.1
+title: Ex. 2.1
 linktitle: Ex 2.1
 type: book
 date: "2021-01-02T00:00:00+01:00"
@@ -10,7 +10,7 @@ toc: false
 
 > Suppose each of $K$-classes has associated target $t_k$, which is a vector of all zeros, except a one in the $k$-th position. Show that classifying to the largest of $\hat y$ amounts to choosing the closet target, $\min_k\|t_k-\hat y\|$, if the elements of $\hat y$ sum to one.
 
-## Solution 
+## Solution 2.1
 
 
 We need to prove:
