--- a/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-2.md
+++ b/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-2.md
@@ -1,5 +1,5 @@
 ---
-title: Exercise 2.2
+title: Ex. 2.2
 linktitle: Ex 2.2
 type: book
 date: "2021-01-02T00:00:00+01:00"
@@ -24,7 +24,7 @@ Therefore we have
 
 \begin{equation}
 \label{eq:2-2blue}
-P(X=x|\text{BLUE}) = \sum_{i=1}^{10}\frac{1}{10}\phi(x;m_i, \textbf{I}/5)
+P(X=x|\text{BLUE}) = \sum_{i=1}^{10}\frac{1}{10}\phi(x;m_i, \textbf{I}/5)\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \
 \end{equation}
 
 where $\phi$ is the density of $N(m_i, \textbf{I}/5)$.
@@ -33,14 +33,14 @@ Similarly
 
 \begin{equation}
 \label{eq:2-2organge}
-    P(X=x|\text{ORANGE}) = \sum_{i=1}^{10}\frac{1}{10}\phi(x;o_i, \textbf{I}/5).
+    P(X=x|\text{ORANGE}) = \sum_{i=1}^{10}\frac{1}{10}\phi(x;o_i, \textbf{I}/5)\ \ \ \ \ \ \ \ \ \ \ \ 
 \end{equation}
 
 The Bayes decision boundary is determined by
 
 \begin{equation}
 \label{eq:2-2bound}
-    P\left(\text{BLUE}|X=x\right) = P\left(\text{ORANGE}|X=x\right).
+    P\left(\text{BLUE}|X=x\right) = P\left(\text{ORANGE}|X=x\right)\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ 
 \end{equation}
 
 From Bayes formula we have
