add solutions in chapter 3

--- a/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-1.md
+++ b/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-1.md
@@ -9,7 +9,7 @@ toc: false
 
 > Show that the $F$ statistic (3.13) for dropping a single coefficient from a model is equal to the square of the corresponding $z$-score (3.12).
 
-## Solution 
+## Solution 3.1
 
 First recall that (see the paragraph below (3.8) in the text)
 
