--- a/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-2.md
+++ b/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-2.md
@@ -16,7 +16,7 @@ toc: false
 >
 > How do these approaches differ? Which band is likely to be wider? Conduct a small simulation experiment to compare the two methods.
 
-## Solution
+## Solution 3.2
 
 For the first method, at each point $\textbf{x}_0$, the variance of $\hat y_0 = \textbf{x}_0\hat\beta$ is
 
