--- a/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-1.md
+++ b/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-1.md
@@ -8,34 +8,34 @@ weight: 1
 toc: false
 ---
 
-> Show how to solve the generalized eigenvalue problem $a^T\textbf{B}a$ subject to $a^T\textbf{W}a = 1$ by transforming to a standard eigenvalue problem.
+???+ question "Ex. 4.1"
+	Show how to solve the generalized eigenvalue problem $a^T\textbf{B}a$ subject to $a^T\textbf{W}a = 1$ by transforming to a standard eigenvalue problem.
 
-## Solution 4.1
+??? done "Soln. 4.1"
+	We are solving a constraint optimization problem
 
-We are solving a constraint optimization problem
+	\begin{eqnarray}
+		&&\max_{a} a^T\textbf{B}a\nonumber\\
+		\text{s.t.} && a^T\textbf{W}a = 1.\nonumber
+	\end{eqnarray}
 
-\begin{eqnarray}
-	&&\max_{a} a^T\textbf{B}a\nonumber\\
-	\text{s.t.} && a^T\textbf{W}a = 1.\nonumber
-\end{eqnarray}
+	The Lagrangian multiplier is
 
-The Lagrangian multiplier is
+	\begin{equation}
+		L(a,\lambda) = a^T\textbf{B}a - \lambda(a^T\textbf{W}a-1).\nonumber
+	\end{equation}
 
-\begin{equation}
-	L(a,\lambda) = a^T\textbf{B}a - \lambda(a^T\textbf{W}a-1).\nonumber
-\end{equation}
+	Taking partial derivative w.r.t $a$ and setting it to be zero we get
 
-Taking partial derivative w.r.t $a$ and setting it to be zero we get
+	\begin{equation}
+		\frac{\partial L(a, \lambda)}{\partial a} = 2\textbf{B}a + \lambda(2\textbf{W}a)=0,\nonumber
+	\end{equation} 
 
-\begin{equation}
-	\frac{\partial L(a, \lambda)}{\partial a} = 2\textbf{B}a + \lambda(2\textbf{W}a)=0,\nonumber
-\end{equation} 
+	which is equivalent to
 
-which is equivalent to
+	\begin{equation}
+		\label{eq:ex41eigen}
+		\textbf{W}^{-1}\textbf{B}a = \lambda a.
+	\end{equation}
 
-\begin{equation}
-	\label{eq:ex41eigen}
-	\textbf{W}^{-1}\textbf{B}a = \lambda a.
-\end{equation}
-
-Now it's easy to see that $\eqref{eq:ex41eigen}$ is a standard eigenvalue problem.
+	Now it's easy to see that $\eqref{eq:ex41eigen}$ is a standard eigenvalue problem.
