--- a/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-19.md
+++ b/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-19.md
@@ -31,4 +31,4 @@ Therefore,
 
 where $\bb{D}(\bb{D}^2+\lambda\bI)^{-2}\bb{D}$ represents a diagonal matrix with elements $\frac{d_j^2}{(d_j^2 + \lambda)^2}$. Therefore we see that $\|\hat\beta^{\text{ridge}}\|$ increases as its tuning parameter $\lambda\ra 0$.
 
-For Lasso, there is no explicit solution as Ridge, however, we can start with the orthogonal case, where the formula is given in [Ex. 3.16](ex3dot16.md). It's easy to see that $\|\hat\beta^{\text{lasso}}\|_1$ increases as $\lambda\ra 0$. For the general case, recall the dual form of Lasso defined in (3.51) and (3.52) in the text. It's easy to see that $t$ in (3.51) and $\lambda$ in (3.52) have an inverse relationship, therefore, as $\lambda\ra 0$, $t$ increases and so does the norm of optimal solutions (see Figure 3.11 for an intuitive illustration in $\mathbb{R}^2$).
+For Lasso, there is no explicit solution as Ridge, however, we can start with the orthogonal case, where the formula is given in [Ex. 3.16](ex3-16.md). It's easy to see that $\|\hat\beta^{\text{lasso}}\|_1$ increases as $\lambda\ra 0$. For the general case, recall the dual form of Lasso defined in (3.51) and (3.52) in the text. It's easy to see that $t$ in (3.51) and $\lambda$ in (3.52) have an inverse relationship, therefore, as $\lambda\ra 0$, $t$ increases and so does the norm of optimal solutions (see Figure 3.11 for an intuitive illustration in $\mathbb{R}^2$).
