--- a/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-21.md
+++ b/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-21.md
@@ -8,7 +8,7 @@ weight: 12
 toc: false
 ---
 
-!!! question "Ex. 3.21"
+???+ question "Ex. 3.21"
 	Show that the solution to the reduced-rank regression problem (3.68), with $\boldsymbol{\Sigma}$ estimated by $\bb{Y}^T\bb{Y}/N$, is given by (3.69). 
     
     *Hint*: Transform $\bb{Y}$ to $\bb{Y}^\ast=\bb{Y}\boldsymbol{\Sigma}^{-\frac{1}{2}}$, and solved in terms of the canonical vectors $u_m^\ast$. Show that $\bb{U}_m=\boldsymbol{\Sigma}^{-\frac{1}{2}}\bb{U}_m^\ast$, and a generalized inverse is $\bb{U}_m^- = \bb{U}_m^{\ast T}\boldsymbol{\Sigma}^{\frac{1}{2}}$.
