--- a/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-22.md
+++ b/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-22.md
@@ -8,8 +8,8 @@ weight: 12
 toc: false
 ---
 
-!!! question "Ex. 3.22"
+???+ question "Ex. 3.22"
     Show that the solution in [Ex. 3.21](ex3-21.md) does not change if $\Sigma$ is estimated by the more natural quantity $(\bb{Y}-\bb{X}\hat{\bb{B}})^T(\bb{Y}-\bb{X}\hat{\bb{B}})/(N-pK)$.
 
-???+ done "Soln. 3.22"
+??? done "Soln. 3.22"
     Note that in our solution for [Ex. 3.21](ex3-21.md), we don't assume the form of $\Sigma$ so the same arguments applies here.
