--- a/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-8.md
+++ b/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-8.md
@@ -25,7 +25,7 @@ toc: false
 
     We see that as the number of neighbors $k$ increases, both the train and test error rates tend to increase. In the extreme case when $k=1$, the train error is 0 as expected.
  
-???+ example "Code"
+??? example "Code"
     ```python
     import pathlib
     import numpy as np
